syntax = "proto3";
package limechain.mantrachain.bridge.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/LimeChain/mantrachain/x/bridge/types";
option (gogoproto.equal_all) = true;

message TxHash {
  bytes index = 1 [(gogoproto.moretags) = "yaml:\"index\""]; 
  bytes bridge_index = 2 [(gogoproto.moretags) = "yaml:\"bridge_index\""]; 
  string tx_hash = 3 [(gogoproto.moretags) = "yaml:\"tx_hash\""]; 
  bool processed = 4 [(gogoproto.moretags) = "yaml:\"processed\""]; 
  string type = 5 [(gogoproto.moretags) = "yaml:\"type\""]; 
}

